--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,2 @@
-<div class="title"><h1>PRÁCTICA ANGULAR</h1></div>
-<app-search-anime></app-search-anime>
-<!-- <div search-anime></div> -->
-<app-anime-list></app-anime-list>
+<app-header></app-header>
+<router-outlet></router-outlet>
