--- a/src/app/features/anime/anime-list/anime-item/anime-item.component.scss
+++ b/src/app/features/anime/anime-list/anime-item/anime-item.component.scss
@@ -1,3 +1,5 @@
+@import '../../../../../styles.scss';
+
 .anime_item{
 display: flex;
 justify-content: space-between;
@@ -10,11 +12,13 @@ justify-content: space-between;
     text-align: center;
     align-items: center;
     margin-top: 5px;
+    background-color: $white;
 }
 .anime_item_id{
-    width: 12%;
+    width: 10%;
     
 }
 .anime_item_title{
-    width: 83%;
+    width: 86%;
+    margin-right: 4px;
 }
