--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,32 @@
-/* You can add global styles to this file, and also import other style files */
+$red: #FF5151 !default;
+$black: #2F353A !default;
+$grey: #F6F6F6 !default;
+$white: #FFFFFF !default;
+
+
+*{
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+html, body{
+    margin: 0;
+    background: $grey;
+    min-height: 100vh;
+}
+
+.user-register__formControl--diferent input{
+    border: 2px solid rgba($color: #000000, $alpha: .1);
+    height: 30px;
+    width: 450px !important;
+    padding: 0 20px;
+    border-radius: 0;
+    font-size: 14px;
+
+    &::placeholder{
+        font-size: 14px;
+    }
+}
+
+.panelWidth{
+    width: 700px !important;
+    height: auto;
+}
