--- a/src/app/features/anime/anime-list/anime-list.component.html
+++ b/src/app/features/anime/anime-list/anime-list.component.html
@@ -1,12 +1,11 @@
 <div *ngIf="episodesListService.idAnime !== undefined">
 
-    <div class="episode">
-
+    <div id="episode" class="episode">
         <p-table #tableEpisodes [value]="episodesListService.episodes" [lazy]="true" (onLazyLoad)="loadAnimes($event)" 
             [paginator]="true" [rows]="100" [totalRecords]="episodesListService.totalRecords" [loading]="loading">
             <ng-template pTemplate="header">
                 <tr>
-                    <th>Nº</th>
+                    <th>#</th>
                     <th>Episodio</th>
                 </tr>
             </ng-template>
@@ -17,8 +16,6 @@
                 </tr>
             </ng-template>
         </p-table>
-
-        
     </div>
     
 
